Tache 2.2 Kilometrage modifié uniquement avec boutons +/- Distinction appuis court +/-1 et continu

--- a/app/src/main/res/layout/activity_km.xml
+++ b/app/src/main/res/layout/activity_km.xml
@@ -97,8 +97,8 @@
                 android:layout_gravity="center"
                 android:width="100dp"
                 android:gravity="end|center_vertical"
-                android:inputType="number">
-
+                android:inputType="number"
+                android:focusable="false">
                 <requestFocus />
             </EditText>
 
