Passage à  un modèle MVC pour permettre de gérer l'authentification et l'accès à la base de données de l'entreprise GSB (serveur distant)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
     android:layout_alignParentTop="true"
     android:orientation="vertical"
     android:weightSum="1"
-    tools:context=".MainActivity"
-    tools:menu="@menu/main_menu">
+    tools:context=".Vue.MainActivity"
+    tools:menu="@menu/main">
 
     <LinearLayout
         android:layout_width="match_parent"
