--- a/app/src/main/res/layout/activity_etapes.xml
+++ b/app/src/main/res/layout/activity_etapes.xml
@@ -8,7 +8,7 @@
     android:layout_alignParentTop="true"
     android:orientation="vertical"
     android:weightSum="1"
-    tools:context=".EtapesActivity">
+    tools:context=".Vue.EtapesActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
