--- a/app/src/main/res/layout/activity_nuit.xml
+++ b/app/src/main/res/layout/activity_nuit.xml
@@ -8,7 +8,7 @@
     android:layout_alignParentTop="true"
     android:orientation="vertical"
     android:weightSum="1"
-    tools:context=".NuitActivity">
+    tools:context=".Vue.NuitActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
